# wingpanel-indicator-sys-monitor

./: LICENSE  README.md  meson.build
bild/meson-logs/: meson-log.txt
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.plugarut.wingpanel-indicator-sys-monitor-indicator.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+160 more)
schemas/: com.github.plugarut.wingpanel-indicator-sys-monitor.gschema.xml
src/: Indicator.vala  Indicator.vala~  SysMonitorIndicator.vala  meson.build
src/Services/: BackgroundManager.vala  CPU.vala  Memory.vala  Net.vala  Settings.vala  System.vala  Utils.vala
src/Widgets/: DisplayWidget.vala  MainView.vala  MainViewRow.vala  PopoverWidget.vala  PopoverWidget.vala~  SettingsView.vala  SysGraph.vala
vapi/: libgtop-2.0.vapi
